# work-stealing-queue

./: CMakeLists.txt  LICENSE  README.md  wsq.hpp
examples/: .evaluate.cpp.swp  CMakeLists.txt  evaluate.cpp  simple.cpp
unittests/: CMakeLists.txt  unittest_wsq.cpp
